--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -11,19 +11,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="vertical"
+        android:layout_height="65dp"
         android:background="@color/colorPrimaryDark"
+        android:orientation="vertical"
         tools:ignore="UselessLeaf">
 
         <TextView
-            android:textSize="30sp"
-            android:layout_marginTop="20dp"
-            android:textColor="#FFFFFF"
-            android:text="Create Item"
-            android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:text="Edit Item"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp" />
 
     </LinearLayout>
 
@@ -32,25 +32,38 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
+        <Button
+            android:id="@+id/btnRemove"
+            android:layout_width="140dp"
+            android:layout_height="28dp"
+            android:layout_marginLeft="265dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="#979797"
+            android:text="Delete Task"
+            android:textColor="#EBE7E7"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/addItemTitleText"
-            android:textSize="20sp"
-            android:textColor="#C4000000"
-            android:text="Item Title"
+            android:layout_width="143dp"
+            android:layout_height="wrap_content"
             android:paddingLeft="20dp"
-            android:paddingBottom="10dp"
             android:paddingTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:paddingBottom="10dp"
+            android:text="Item Title"
+            android:textColor="#C4000000"
+            android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/newItemTitle"
+            android:id="@+id/newTitle"
             android:inputType="text"
             android:background="#C9C7C7"
             android:layout_width="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="Enter the name of the task"
+            android:hint="Change the name of the task"
             android:layout_height="50dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"/>
@@ -67,13 +80,13 @@
             android:layout_height="wrap_content"/>
 
         <EditText
-            android:id="@+id/newItemDescription"
+            android:id="@+id/newDescription"
             android:inputType="text"
             android:background="#C9C7C7"
             android:layout_width="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="Details of the task (30 char max)"
+            android:hint="Change details of the task (30 char max)"
             android:maxLength="30"
             android:layout_height="50dp"
             android:paddingLeft="16dp"
@@ -91,26 +104,26 @@
             android:layout_height="wrap_content"/>
 
         <EditText
-            android:id="@+id/newItemDate"
+            android:id="@+id/newDate"
             android:inputType="text"
             android:background="#C9C7C7"
             android:layout_width="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="Enter the timeline or date"
+            android:hint="Change the timeline or date"
             android:layout_height="50dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"/>
 
         <Button
-            android:id="@+id/btnAdd"
+            android:id="@+id/btnSave"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="20dp"
             android:background="#673AB7"
-            android:text="Add New Item"
+            android:text="Save"
             android:textColor="#EBE7E7"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -129,6 +142,4 @@
             android:textStyle="bold" />
 
     </LinearLayout>
-
-
 </LinearLayout>
