--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -103,6 +103,20 @@
             android:paddingRight="16dp"/>
 
         <Button
+            android:id="@+id/btnSave"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
+            android:background="#21242B"
+            android:text="Update"
+            android:textColor="#EBE7E7"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+
+        <Button
             android:id="@+id/btnCancel"
             android:layout_width="match_parent"
             android:layout_height="60dp"
