--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
             android:layout_height="60dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="#21242B"
+            android:background="#673AB7"
             android:text="Create New Item"
             android:textColor="#EBE7E7"
             android:textSize="18sp"
