Added search function (Searches everything: Title, date, description). Added headers with information about the project to all files.

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
+ICS 45J, Fall 2019
+Lab 5, Android Studio
+Group name: Jackfruit
+Members: Lillian Won, Linda Le, Jack Yang Huang
+-->
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -43,7 +51,7 @@
             android:textSize="20sp" />
 
         <ImageButton
-            android:id="@+id/searchButton"
+            android:id="@+id/btnSearchWords"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:layout_weight="1"
