--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -3,7 +3,7 @@
 <!--
 ICS 45J, Fall 2019
 Lab 5, Android Studio
-Group name: Jackfruit
+Group name: JJJ
 Members: Lillian Won, Linda Le, Jack Yang Huang
 -->
 
